apps/gateway/gateway-nanomq.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nanomq
spec:
  gatewayClassName: cilium
  listeners:
    - name: mqtts
      protocol: TLS
      port: 8883
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
